# Social-Simulation

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  main.py  pyproject.toml  requirements.txt  run_web.cmd  操作指南.md  系统说明.md  结束端口占用.cmd  配置示例-Claude.cmd  配置示例-DeepSeek.cmd  配置示例-Gemini.cmd  配置示例-OpenAI-ChatGPT.cmd
.github/: pull_request_template.md
people/: attribution.py  attribution_report.py  calibration_loop.py  causal_audit.py  causal_consistency.py  config.py  context.py  crisis.py  decision_support.py  engine.py  experiment_manifest.py  extension_stack.py  finance_ledger.py  internal_plan_commit.py  layer_protocol.py  regional_grounding.py  reproducibility.py  risk_ensemble_report.py  roster.py  rules.py  scenario_overrides.py  stability_report.py  state.py  triggers.py  validation_tools.py  web_search_context.py  webapp.py
pepole/: attribution.py  attribution_report.py  calibration_loop.py  causal_audit.py  causal_consistency.py  config.py  context.py  crisis.py  decision_support.py  engine.py  experiment_manifest.py  extension_stack.py  finance_ledger.py  internal_plan_commit.py  layer_protocol.py  pause_store.py  regional_grounding.py  reproducibility.py  risk_ensemble_report.py  roster.py  rules.py  scenario_overrides.py  stability_report.py  state.py  triggers.py  web_search_context.py  webapp.py
scenarios/: default.yaml  policy_county_example.yaml  product_launch.yaml  regional_hotpot_chengdu.yaml  roadmap_demo.yaml  roadmap_demo_truth_sample.csv  rokid_ai_glasses.yaml  society_export_software.yaml  startup_example.yaml
(+42 files in other folders)
